control flow and bootstrap

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,5 +8,7 @@
   <app-data-binding></app-data-binding>
   <hr>
   <app-signal-exp></app-signal-exp>
+  <hr>
+  <app-control-flow></app-control-flow>
   <router-outlet></router-outlet>
 </main>
