--- a/src/app/components/control-flow/control-flow.html
+++ b/src/app/components/control-flow/control-flow.html
@@ -48,8 +48,8 @@
   </select>
 </div>
 
-<div>
-  <p>Player List</p>
+<div class="mt-4">
+  <h4>Player List</h4>
   <table>
     <thead>
       <tr>
